Added HTTP error details provider, refactored HTTP-sink and source package to handle error provider, fix sonar issues and added Validation error for linear retry duration