@@ -21,6 +21,12 @@ import com.google.common.base.Charsets;
 import com.google.common.base.Strings;
 import io.cdap.cdap.api.data.format.StructuredRecord;
 import io.cdap.cdap.api.data.schema.Schema;
+import io.cdap.cdap.api.exception.ErrorCategory;
+import io.cdap.cdap.api.exception.ErrorCodeType;
+import io.cdap.cdap.api.exception.ErrorType;
+import io.cdap.cdap.api.exception.ErrorUtils;
+import io.cdap.cdap.api.exception.ProgramFailureException;
+import io.cdap.plugin.http.common.HttpErrorDetailsProvider;
 import io.cdap.plugin.http.common.RetryPolicy;
 import io.cdap.plugin.http.common.error.ErrorHandling;
 import io.cdap.plugin.http.common.error.HttpErrorHandler;
@@ -55,7 +61,6 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.ProtocolException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
@@ -72,7 +77,6 @@ import java.util.regex.Pattern;
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLSession;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
@@ -90,9 +94,9 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
   private final HTTPSinkConfig config;
   private final MessageBuffer messageBuffer;
   private String contentType;
-  private String url;
+  private final String url;
   private String configURL;
-  private List<PlaceholderBean> placeHolderList;
+  private final List<PlaceholderBean> placeHolderList;
   private final Map<String, String> headers;
 
   private AccessToken accessToken;
@@ -122,7 +126,7 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
   }
 
   @Override
-  public void write(StructuredRecord input, StructuredRecord unused) throws IOException {
+  public void write(StructuredRecord input, StructuredRecord unused) {
     configURL = url;
     if (config.getMethod().equals(REQUEST_METHOD_POST) || config.getMethod().equals(REQUEST_METHOD_PUT) ||
       config.getMethod().equals(REQUEST_METHOD_PATCH)) {
@@ -141,7 +145,7 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
   }
 
   @Override
-  public void close(TaskAttemptContext taskAttemptContext) throws IOException, InterruptedException {
+  public void close(TaskAttemptContext taskAttemptContext) {
     // Process remaining messages after batch executions.
     if (!config.getMethod().equals(REQUEST_METHOD_DELETE)) {
       flushMessageBuffer();
@@ -166,35 +170,47 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
       sslContext = SSLContext.getInstance("SSL");
       sslContext.init(null, trustAllCerts, new java.security.SecureRandom());
     } catch (KeyManagementException | NoSuchAlgorithmException e) {
-      throw new IllegalStateException("Error while installing the trust manager: " + e.getMessage(), e);
+      throw new IllegalStateException(
+        String.format("Failed while installing the trust manager with message: %s", e.getMessage()), e);
     }
     HttpsURLConnection.setDefaultSSLSocketFactory(sslContext.getSocketFactory());
-    HostnameVerifier allHostsValid = new HostnameVerifier() {
-      public boolean verify(String hostname, SSLSession session) {
-        return true;
-      }
-    };
+    HostnameVerifier allHostsValid = (hostname, session) -> true;
     HttpsURLConnection.setDefaultHostnameVerifier(allHostsValid);
   }
 
-  private boolean executeHTTPServiceAndCheckStatusCode() throws IOException {
+  private boolean executeHTTPServiceAndCheckStatusCode() {
     LOG.debug("HTTP Request Attempt No. : {}", ++retryCount);
-    CloseableHttpClient httpClient = createHttpClient(configURL);
-
-    CloseableHttpResponse response = null;
-    try {
-      URL url = new URL(configURL);
-      HttpEntityEnclosingRequestBase request = new HttpRequest(URI.create(String.valueOf(url)),
-        config.getMethod());
-
-      if (url.getProtocol().equalsIgnoreCase("https")) {
-        // Disable SSLv3
-        System.setProperty("https.protocols", "TLSv1,TLSv1.1,TLSv1.2");
-        if (config.getDisableSSLValidation()) {
-          disableSSLValidation();
-        }
+    // Try-with-resources ensures proper resource management
+    try (CloseableHttpClient httpClient = createHttpClient(configURL);
+         CloseableHttpResponse response = executeHttpRequest(httpClient, new URL(configURL))) {
+      httpStatusCode = response.getStatusLine().getStatusCode();
+      httpResponseBody = new HttpResponse(response).getBody();
+      RetryableErrorHandling errorHandlingStrategy = httpErrorHandler.getErrorHandlingStrategy(httpStatusCode);
+      boolean shouldRetry = errorHandlingStrategy.shouldRetry();
+      if (!shouldRetry) {
+        messageBuffer.clear();
+        retryCount = 0;
       }
+      return !shouldRetry;
+    } catch (MalformedURLException e) {
+      throw new IllegalArgumentException("Invalid URL: " + configURL, e);
+    } catch (IOException e) {
+      LOG.warn("Error making {} request to URL {}.", config.getMethod(), config.getUrl());
+      String errorMessage = String.format(
+          "Failed to execute %s request to %s with error code %s with message: %s. ",
+          config.getMethod(), config.getUrl(), httpStatusCode, e.getMessage());
+      throw getProgramFailureException(errorMessage,
+          "Unable to write record and error clearing message buffer: %s. %s. "
+              + "For more details, see %s.", e);
+    }
+  }
 
+  private CloseableHttpResponse executeHttpRequest(CloseableHttpClient httpClient, URL url) {
+    try {
+      HttpEntityEnclosingRequestBase request = new HttpRequest(URI.create(url.toString()), config.getMethod());
+      if ("https".equalsIgnoreCase(url.getProtocol())) {
+        configureHttpsSettings();
+      }
       if (!messageBuffer.isEmpty()) {
         String requestBodyString = messageBuffer.getMessage();
         if (requestBodyString != null) {
@@ -205,40 +221,43 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
 
       request.setHeaders(getRequestHeaders());
 
-      response = httpClient.execute(request);
-      httpStatusCode = response.getStatusLine().getStatusCode();
-      LOG.debug("Response HTTP Status code: {}", httpStatusCode);
-      httpResponseBody = new HttpResponse(response).getBody();
-
-    } catch (MalformedURLException | ProtocolException e) {
-      throw new IllegalStateException("Error opening url connection. Reason: " + e.getMessage(), e);
+      // Execute the request and return the response
+      return httpClient.execute(request);
+    } catch (UnsupportedEncodingException e) {
+      throw new IllegalStateException("Error encoding the request Reason: " + e.getMessage(), e);
     } catch (IOException e) {
-      LOG.warn("Error making {} request to url {}.", config.getMethod(), config.getUrl());
-    } finally {
-      if (response != null) {
-        response.close();
-      }
+      throw getProgramFailureException(String.format("Unable to execute HTTP request to URL: %s. "
+              + "Failed to write record and error clearing message buffer with error code %s with "
+              + "message: %s.", url, httpStatusCode, e.getMessage()),
+          "Failed to write record and error clearing message buffer: %s. %s. For more details, "
+              + "see %s", e);
+    } catch (Exception e) {
+      throw getProgramFailureException(String.format(
+              "Unexpected error occurred, unable to write record and error "
+                  + "clearing message buffer. Failed to execute HTTP request to %s with error code %s "
+                  + "with message: %s.", url, httpStatusCode, e.getMessage()),
+          "Unexpected error occurred, unable to write record: %s. %s. For more details, "
+              + "see %s.", e);
     }
-    RetryableErrorHandling errorHandlingStrategy = httpErrorHandler.getErrorHandlingStrategy(httpStatusCode);
-    boolean shouldRetry = errorHandlingStrategy.shouldRetry();
-    if (!shouldRetry) {
-      messageBuffer.clear();
-      retryCount = 0;
-    }
-    return !shouldRetry;
   }
 
+  private void configureHttpsSettings() {
+    System.setProperty("https.protocols", "TLSv1,TLSv1.1,TLSv1.2");
+    if (Boolean.TRUE.equals(config.getDisableSSLValidation())) {
+      disableSSLValidation();
+    }
+  }
 
-  public CloseableHttpClient createHttpClient(String pageUriStr) throws IOException {
+  public CloseableHttpClient createHttpClient(String pageUriStr) {
     HttpClientBuilder httpClientBuilder = HttpClientBuilder.create();
 
     // set timeouts
-    Long connectTimeoutMillis = TimeUnit.SECONDS.toMillis(config.getConnectTimeout());
-    Long readTimeoutMillis = TimeUnit.SECONDS.toMillis(config.getReadTimeout());
+    long connectTimeoutMillis = TimeUnit.SECONDS.toMillis(config.getConnectTimeout());
+    long readTimeoutMillis = TimeUnit.SECONDS.toMillis(config.getReadTimeout());
     RequestConfig.Builder requestBuilder = RequestConfig.custom();
-    requestBuilder.setSocketTimeout(readTimeoutMillis.intValue());
-    requestBuilder.setConnectTimeout(connectTimeoutMillis.intValue());
-    requestBuilder.setConnectionRequestTimeout(connectTimeoutMillis.intValue());
+    requestBuilder.setSocketTimeout((int) readTimeoutMillis);
+    requestBuilder.setConnectTimeout((int) connectTimeoutMillis);
+    requestBuilder.setConnectionRequestTimeout((int) connectTimeoutMillis);
     httpClientBuilder.setDefaultRequestConfig(requestBuilder.build());
 
     // basic auth
@@ -265,30 +284,32 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
     return httpClientBuilder.build();
   }
 
-  private Header[] getRequestHeaders() throws IOException {
+  private Header[] getRequestHeaders() {
     ArrayList<Header> clientHeaders = new ArrayList<>();
 
     if (accessToken == null || OAuthUtil.tokenExpired(accessToken)) {
-      accessToken = OAuthUtil.getAccessToken(config);
+      try {
+        accessToken = OAuthUtil.getAccessToken(config);
+      } catch (IOException e) {
+        String errorReason = String.format("Failed to get access token with message: %s", e.getMessage());
+        throw ErrorUtils.getProgramFailureException(new ErrorCategory(ErrorCategory.ErrorCategoryEnum.PLUGIN),
+          errorReason, errorReason, ErrorType.SYSTEM, true, e);
+      }
     }
 
     if (accessToken != null) {
       Header authorizationHeader = getAuthorizationHeader(accessToken);
-      if (authorizationHeader != null) {
-        clientHeaders.add(authorizationHeader);
-      }
+      clientHeaders.add(authorizationHeader);
     }
 
     headers.put("Request-Method", config.getMethod().toUpperCase());
     headers.put("Instance-Follow-Redirects", String.valueOf(config.getFollowRedirects()));
     headers.put("charset", config.getCharset());
 
-    if (config.getMethod().equals(REQUEST_METHOD_POST)
+    if ((config.getMethod().equals(REQUEST_METHOD_POST)
       || config.getMethod().equals(REQUEST_METHOD_PATCH)
-      || config.getMethod().equals(REQUEST_METHOD_PUT)) {
-      if (!headers.containsKey("Content-Type")) {
-        headers.put("Content-Type", contentType);
-      }
+      || config.getMethod().equals(REQUEST_METHOD_PUT)) && !headers.containsKey("Content-Type")) {
+      headers.put("Content-Type", contentType);
     }
 
     // set default headers
@@ -336,7 +357,10 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
       }
       return finalURLBuilder.toString();
     } catch (UnsupportedEncodingException e) {
-      throw new IllegalStateException("Error encoding URL with placeholder value. Reason: " + e.getMessage(), e);
+      String errorReason = String.format("Failed to encode URL with placeholder value with message: %s",
+        e.getMessage());
+      throw ErrorUtils.getProgramFailureException(new ErrorCategory(ErrorCategory.ErrorCategoryEnum.PLUGIN),
+        errorReason, errorReason, ErrorType.USER, false, e);
     }
   }
 
@@ -348,17 +372,12 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
       return;
     }
     contentType = messageBuffer.getContentType();
-    try {
       Awaitility
         .await().with()
         .pollInterval(pollInterval)
         .pollDelay(config.getWaitTimeBetweenPages(), TimeUnit.MILLISECONDS)
         .timeout(config.getMaxRetryDuration(), TimeUnit.SECONDS)
         .until(this::executeHTTPServiceAndCheckStatusCode);
-    } catch (Exception e) {
-      throw new RuntimeException("Error while executing http request for remaining input messages " +
-                                   "after the batch execution. " + e);
-    }
     messageBuffer.clear();
 
     ErrorHandling postRetryStrategy = httpErrorHandler.getErrorHandlingStrategy(httpStatusCode)
@@ -368,8 +387,12 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
       case SUCCESS:
         break;
       case STOP:
-        throw new IllegalStateException(String.format("Fetching from url '%s' returned status code '%d' and body '%s'",
-                                                      config.getUrl(), httpStatusCode, httpResponseBody));
+        throw getProgramFailureException(String.format(
+                "Retry failed! Unable to write and execute request. "
+                    + "Fetching from '%s' returned http error status code '%d' with response '%s'.",
+                config.getUrl(), httpStatusCode, httpResponseBody),
+            "Unable to write and execute request: %s. %s. For more details, see %s.",
+            null);
       case SKIP:
       case SEND:
         LOG.warn(String.format("Fetching from url '%s' returned status code '%d' and body '%s'",
@@ -378,7 +401,24 @@ public class HTTPRecordWriter extends RecordWriter<StructuredRecord, StructuredR
       default:
         throw new IllegalArgumentException(String.format("Unexpected http error handling: '%s'", postRetryStrategy));
     }
-
   }
 
+  /**
+   * Return program failure exception
+   *
+   * @param errorMessage
+   * @param errorInfo
+   * @param e
+   * @return
+   */
+  private ProgramFailureException getProgramFailureException(String errorMessage, String errorInfo,
+      Exception e) {
+    ErrorUtils.ActionErrorPair pair = ErrorUtils.getActionErrorByStatusCode(httpStatusCode);
+    String errorReason = String.format(errorInfo, httpStatusCode, pair.getCorrectiveAction(),
+        HttpErrorDetailsProvider.getSupportedDocumentUrl());
+    return ErrorUtils.getProgramFailureException(
+        new ErrorCategory(ErrorCategory.ErrorCategoryEnum.PLUGIN), errorReason, errorMessage,
+        pair.getErrorType(), true, ErrorCodeType.HTTP, String.valueOf(httpStatusCode),
+        HttpErrorDetailsProvider.getSupportedDocumentUrl(), e);
+  }
 }
